# mdtablegen

./: .gitignore  README.md  TODO.md  pyproject.toml
demo/: test1.py  test_table.py
mdtable/: divfactory.py  render.py  rowfactory.py  table.py
mdtablegen/: table.py
src/mdtablegen/: layout.py  rowfactory.py  table.py
src/mdtablegen_xelphene/: rowfactory.py  table.py
test/: test1.py  test_table.py
