[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdtablegen"
version = "1.0.2"
authors = [
  { name="Steve Benson", email="steve@xelphene.net" },
]
description = "A Markdown Table Generator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xelphene/mdtablegen"
"Bug Tracker" = "https://github.com/xelphene/mdtablegen/issues"
